--- a/wordcloud.css
+++ b/wordcloud.css
@@ -5,7 +5,7 @@ html, body {
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
-	background-color: #353130;
+	background-color: #eee;
 }
 
 body, input, select, button {
