--- a/wordcloud.css
+++ b/wordcloud.css
@@ -47,6 +47,7 @@ a {
 
 .center_btn {
 	position: absolute;
+	background: rgba(255,255,255,0); /* For IE9, make button clickable */
 	display: none;
 	top: 50%; left: 50%;
 	width: 450px; height: 250px;
