--- a/wordcloud.css
+++ b/wordcloud.css
@@ -1,7 +1,7 @@
 html, body {
 	border: none;
-	margin: none;
-	padding: none;
+	margin: 0;
+	padding: 0;
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
