title ui for and status switching for google plus

--- a/wordcloud.css
+++ b/wordcloud.css
@@ -293,3 +293,7 @@ a {
 	background: transparent url('http://wwww.facebook.com/favicon.ico') center center no-repeat;
 	
 }
+
+.googleplus {
+	background: transparent url('https://plus.google.com/favicon.ico') center center no-repeat;
+}
