Edit List Dialog, closes #4

--- a/assets/wordcloud.scss
+++ b/assets/wordcloud.scss
@@ -19,7 +19,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: transparent;
 }
 
