--- a/assets/wordcloud.css
+++ b/assets/wordcloud.css
@@ -182,7 +182,7 @@ https://gist.github.com/2945570
   @media (max-width: 979px) {
     #wc-dashboard button > span {
       display: none; } }
-  #wc-dashboard button > span {
+  #wc-dashboard .btn > span {
     padding-left: 5px; }
 
 .favicons-sprite, .favicons-facebook, .favicons-plurk, .favicons-twitter {
