--- a/assets/wordcloud.css
+++ b/assets/wordcloud.css
@@ -55,6 +55,9 @@ body {
     -webkit-transform: rotateX(-20deg);
     visibility: hidden;
     opacity: 0; }
+  #wc-source-dialog .btn-group,
+  #wc-dashboard .btn-group {
+    margin-bottom: 5px; }
 
 /*
 Based on <i> cloud, design by daneden
@@ -188,7 +191,7 @@ https://gist.github.com/2945570
     padding-left: 5px; }
 
 .favicons-sprite, .favicons-facebook, .favicons-plurk, .favicons-twitter {
-  background: url('/./assets/images/favicons-s33d8d4b926.png') no-repeat; }
+  background: url('/assets/images/favicons-s33d8d4b926.png') no-repeat; }
 
 .favicons-facebook {
   background-position: 0 -16px; }
