--- a/assets/wordcloud.css
+++ b/assets/wordcloud.css
@@ -107,14 +107,17 @@ body {
   #wc-dashboard .btn > span {
     padding-left: 5px; }
 
-.favicons-sprite, .favicons-facebook, .favicons-plurk, .favicons-twitter {
-  background: url('/assets/images/favicons-s33d8d4b926.png') no-repeat; }
+.favicons-sprite, .favicons-facebook, .favicons-plurk, .favicons-tumblr, .favicons-twitter {
+  background: url('/assets/images/favicons-se0bb177de3.png') no-repeat; }
 
 .favicons-facebook {
-  background-position: 0 -16px; }
+  background-position: 0 -32px; }
 
 .favicons-plurk {
-  background-position: 0 -32px; }
+  background-position: 0 -48px; }
+
+.favicons-tumblr {
+  background-position: 0 -16px; }
 
 .favicons-twitter {
   background-position: 0 0; }
