Switch to tabs-left style and some layout tweaks

--- a/assets/wordcloud.css
+++ b/assets/wordcloud.css
@@ -40,6 +40,12 @@ body {
     visibility: hidden;
     opacity: 0; }
 
+@media (max-width: 767px) {
+  #wc-source-menu {
+    float: none; } }
+.modal {
+  position: absolute; }
+
 .btn[hidden] {
   display: none; }
 
