--- a/assets/wordcloud.scss
+++ b/assets/wordcloud.scss
@@ -65,6 +65,16 @@ $transition-time: 0.5s;
   }
 }
 
+@media (max-width: 767px) {
+  #wc-source-menu {
+    float: none;
+  }
+}
+
+.modal {
+  position: absolute;
+}
+
 .btn[hidden] {
   display: none;
 }
