Add l10n.js, a localization library w/ restartless l10n support

--- a/assets/wordcloud.css
+++ b/assets/wordcloud.css
@@ -43,6 +43,9 @@ body {
 @media (max-width: 767px) {
   #wc-source-menu {
     float: none; } }
+.modal-footer .input-prepend {
+  margin: 0; }
+
 .modal {
   position: absolute; }
 
