Make the cloud logo visible on non-gradient background

--- a/assets/first-screen.css
+++ b/assets/first-screen.css
@@ -1,6 +1,6 @@
 html {
   min-height: 100%;
-  background: #fff;
+  background: #d9dddf;
   background: linear-gradient(#b4bcbf, #ffffff) no-repeat;
   background: -webkit-linear-gradient(#b4bcbf, white) no-repeat; }
 
