--- a/assets/first-screen.scss
+++ b/assets/first-screen.scss
@@ -3,7 +3,7 @@
 
 html {
   min-height: 100%;
-  background: #fff;
+  background: tint(#b4bcbf, 50%);
   background: linear-gradient(#b4bcbf, white) no-repeat;
   background: -webkit-linear-gradient(#b4bcbf, white) no-repeat;
 }
