smaller icon for IE9 etc

--- a/assets/wordcloud.css
+++ b/assets/wordcloud.css
@@ -155,4 +155,6 @@ body {
 
 .smaller-icon {
   transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -ms-transform: scale(0.8);
   -webkit-transform: scale(0.8); }
