--- a/assets/wordcloud.scss
+++ b/assets/wordcloud.scss
@@ -229,5 +229,7 @@ $shadow-length: $icon-width * 0.05;
 
 .smaller-icon {
   transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -ms-transform: scale(0.8);
   -webkit-transform: scale(0.8);
 }
