blank.html; IE does not allow data URL to be loaded directly

--- a/assets/first-screen.css
+++ b/assets/first-screen.css
@@ -105,3 +105,6 @@ https://gist.github.com/2945570
     height: 51.11px;
     top: -24.44089px;
     right: 13.33px; }
+
+#popup-image {
+  width: 100%; }
