--- a/assets/first-screen.css
+++ b/assets/first-screen.css
@@ -1,8 +1,6 @@
 html {
-  min-height: 100%;
-  background: #d9dddf;
-  background: linear-gradient(#b4bcbf, #ffffff) no-repeat;
-  background: -webkit-linear-gradient(#b4bcbf, white) no-repeat; }
+  height: 100%;
+  overflow-x: hidden; }
 
 body {
   font: 14px sans-serif;
@@ -11,10 +9,11 @@ body {
   padding: 0;
   margin: 0;
   color: #333;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden; }
+  min-height: 100%;
+  overflow-x: hidden;
+  background: #d9dddf;
+  background: linear-gradient(#b4bcbf, #ffffff) no-repeat;
+  background: -webkit-linear-gradient(#b4bcbf, white) no-repeat; }
 
 body:lang(zh-tw), body:lang(zh-tw) label, body:lang(zh-tw) input, body:lang(zh-tw) textarea, body:lang(zh-tw) select, body:lang(zh-tw) button,
 body:lang(zh-tw) .btn {
