--- a/assets/wordcloud.css
+++ b/assets/wordcloud.css
@@ -49,10 +49,17 @@ body {
     visibility: hidden;
     opacity: 0; }
 
+#wc-source-selection {
+  display: none; }
+
 @media (max-width: 767px) {
-  #wc-source-menu {
-    float: none; } }
-.modal-footer .input-prepend {
+  #wc-source-dialog .tabs-left {
+    display: none; }
+
+  #wc-source-selection {
+    display: inline; } }
+.modal-footer .input-prepend,
+.modal-header select {
   margin: 0; }
 
 .modal {
