--- a/assets/wordcloud.css
+++ b/assets/wordcloud.css
@@ -17,6 +17,25 @@ body {
   top: 50%;
   left: 50%; }
 
+#wc-canvas-hover {
+  position: absolute;
+  border: 2px solid #fff;
+  box-shadow: 0 0 4px 0 #008;
+  padding: 2px;
+  margin: -4px 0 0 -4px;
+  pointer-events: none; }
+
+#wc-canvas-hover-label {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #333;
+  margin-top: 6px;
+  padding: 0 0.5em;
+  border-radius: 0.5em;
+  white-space: nowrap; }
+
 #wc-loading {
   transition: visibility 0.5s ease, opacity 0.5s ease;
   -webkit-transition: visibility 0.5s ease, opacity 0.5s ease; }
@@ -169,8 +188,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%; }
+  width: 100%; }
   #wc-dashboard > .container {
     margin-top: 10px; }
   #wc-dashboard .hide-label > span {
