--- a/assets/wordcloud.scss
+++ b/assets/wordcloud.scss
@@ -271,6 +271,13 @@ $shadow-length: $icon-width * 0.05;
   }
 }
 
+#wc-psm > iframe {
+  display: block;
+  margin: 1em 0;
+  width: 250px;
+  height: 250px;
+}
+
 #wc-dashboard {
   position: absolute;
   top: 0; left: 0;
